main.tf
provider "aws" {
  region = var.region
}

# Create VPC
module "vpc" {
  source = "./modules/vpc"
  vpc_cidr = var.vpc_cidr
  vpc_name = var.vpc_name
}

# Create Public Subnet
resource "aws_subnet" "public_subnet" {
  vpc_id                  = module.vpc.vpc_id
  cidr_block              = var.public_subnet_cidr
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}

# Create Private Subnet
resource "aws_subnet" "private_subnet" {
  vpc_id     = module.vpc.vpc_id
  cidr_block = var.private_subnet_cidr

  tags = {
    Name = "private-subnet"
  }
}

# aws_internet_gateway
resource "aws_internet_gateway" "my_IGW" {
  vpc_id = module.vpc.vpc_id
  tags = {
    Name = "main"
  }
}

# create route table
resource "aws_route_table" "public_rt" {
  vpc_id = module.vpc.vpc_id

  tags = {
    Name = "public-rt"
  }
}
resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.my_IGW.id
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
# create elastic ip
resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-eip"
  }
}

# create NAT gateway 
resource "aws_nat_gateway" "my_NAT" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnet.id

  tags = {
    Name = "my-NAT"
  }

  depends_on = [aws_internet_gateway.my_IGW]
}

# private route table
resource "aws_route_table" "private_rt" {
  vpc_id = module.vpc.vpc_id

  tags = {
    Name = "private_rt"
  }
}

# create route to NAT gateway
resource "aws_route" "private_route" {
  route_table_id            = aws_route_table.private_rt.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.my_NAT.id

}

# private subnet association
resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id
}

# public security group

resource "aws_security_group" "public_sg" {
  name        = "public-sg"
  description = "Allow SSH access"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "SSH from my laptop"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "for web access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "public-sg"
  }
}

# private security group

resource "aws_security_group" "private_sg" {
  name        = "private-sg"
  description = "Allow SSH only from public SG"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description     = "SSH from public EC2"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.public_sg.id]
  }

  ingress {
  description     = "App access from public EC2"
  from_port       = 4000
  to_port         = 4000
  protocol        = "tcp"
  security_groups = [aws_security_group.public_sg.id]
}

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "private-sg"
  }
}

# create public instance
resource "aws_instance" "public_ec2" {
  ami                         = "ami-091138d0f0d41ff90"
  instance_type               = "t3.micro"
  key_name                    = "tokesh"
  subnet_id                   = aws_subnet.public_subnet.id
  vpc_security_group_ids      = [aws_security_group.public_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "public_ec2"
  }
}

# create private instance
resource "aws_instance" "private_ec2" {
  ami                         = "ami-091138d0f0d41ff90"
  instance_type               = "t3.micro"
  key_name                    = "tokesh"
  subnet_id                   = aws_subnet.private_subnet.id
  vpc_security_group_ids      = [aws_security_group.private_sg.id]

  tags = {
    Name = "private_ec2"
  }
}
